Afegits alguns enunciats a geometria diferencial

--- a/parts/EDOS2.tex
+++ b/parts/EDOS2.tex
@@ -3,6 +3,8 @@
 \begin{document}
 \part{Equacions diferencials ordinàries \rom{2}}
 \chapter{Sistemes autònoms al pla}
+	\emph{\hypersetup{urlcolor=black}\href{https://www.urbandictionary.com/define.php?term=wtf}{wtf} is this assignatura}
+	
 %\section{Sistemes autònoms a \ensuremath{\mathbb{R}^{n}}}
 %%	\subsection{Interpretació geomètrica} % Justificació dels retrats de fase? Això a EDOS I
 %	\subsection{Estructura de les òrbites}
