Afegits enunciats fins començar la secció de la primera forma fonamental

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -137,6 +137,9 @@
 \DeclareMathOperator{\radicircosculadora}{\rho}
 \DeclareMathOperator{\binormal}{B}
 \DeclareMathOperator{\torsio}{\tau}
+\DeclareMathOperator{\EspaiTangent}{T}
+\DeclareMathOperator{\PrimeraFormaFonamental}{\rom{1}}
+\DeclareMathOperator{\SegonaFormaFonamental}{\rom{2}}
 
 \DeclareMathOperator*{\suport}{Supp}
 
@@ -193,7 +196,7 @@
 \newcommand{\nulla}{nu{\lgem}a}
 
 \makeatletter
-\newcommand*{\rom}[1]{\expandafter\@slowromancap\romannumeral #1@}
+	\newcommand*{\rom}[1]{\expandafter\@slowromancap\romannumeral #1@}
 \makeatother
 
 \newcommand{\anglelogos}{337.5}
