--- a/parts/EDOS2.tex
+++ b/parts/EDOS2.tex
@@ -5,36 +5,38 @@
 \chapter{Sistemes autònoms al pla}
 	\emph{\hypersetup{urlcolor=black}\href{https://www.urbandictionary.com/define.php?term=wtf}{wtf} is this assignatura}
 	
-%\section{Sistemes autònoms a \ensuremath{\mathbb{R}^{n}}}
-%%	\subsection{Interpretació geomètrica} % Justificació dels retrats de fase? Això a EDOS I
-%	\subsection{Estructura de les òrbites}
-%	\subsection{Integrals primeres}
-%	\subsection{Superfícies invariants}
-%	\subsection{Retrat de fase i conjugació}
-%\section{Sistemes integrables}
-%	\subsection{Sistemes potencials}
-%	\subsection{Sistemes Hamiltonians}
-%	\subsection{El model de Lotka-Volterra}
-%\section{Sistemes no integrables}
-%	\subsection{Teorema del flux tubular}
-%	\subsection{Anàlisi qualitativa dels punts d'equilibri}
-%	\subsection{Comportament límit de les òrbites}
-%	\subsection{Teorema de Bendixson-Poincaré}
-%	\subsection{Funcions de Liapunov}
-%	\subsection{Cicles límit}
-%	\subsection{Criteri de Bendixson-Dulac}
-%%	\subsection{Models a l'ecologia}
-%	\subsection{Sistema de van der Pol}
-%\chapter{Equacions en derivades parcials}
-%\section{Equacions en derivades parcials de primer ordre}
-%	\subsection{Introducció a les equacions en derivades parcials}
-%	\subsection{Equacions lineals i quasi-lineals de primer odre}
-%\section{Equacions en derivades parcials de segon ordre}
-%	\subsection{Equacions de la corda finita}
-%	\subsection{Principi d'Alembert}
-%	\subsection{Problemes de contorn}
-%	\subsection{L'equació de la calor}
-%	\subsection{Problema de la barra infinita}
-%	\subsection{Separació de variables i sèries de Fourier}
-%	\subsection{L'equació de Laplace}
+\begin{comment}
+\section{Sistemes autònoms a \ensuremath{\mathbb{R}^{n}}}
+%	\subsection{Interpretació geomètrica} % Justificació dels retrats de fase? Això a EDOS I
+	\subsection{Estructura de les òrbites}
+	\subsection{Integrals primeres}
+	\subsection{Superfícies invariants}
+	\subsection{Retrat de fase i conjugació}
+\section{Sistemes integrables}
+	\subsection{Sistemes potencials}
+	\subsection{Sistemes Hamiltonians}
+	\subsection{El model de Lotka-Volterra}
+\section{Sistemes no integrables}
+	\subsection{Teorema del flux tubular}
+	\subsection{Anàlisi qualitativa dels punts d'equilibri}
+	\subsection{Comportament límit de les òrbites}
+	\subsection{Teorema de Bendixson-Poincaré}
+	\subsection{Funcions de Liapunov}
+	\subsection{Cicles límit}
+	\subsection{Criteri de Bendixson-Dulac}
+%	\subsection{Models a l'ecologia}
+	\subsection{Sistema de van der Pol}
+\chapter{Equacions en derivades parcials}
+\section{Equacions en derivades parcials de primer ordre}
+	\subsection{Introducció a les equacions en derivades parcials}
+	\subsection{Equacions lineals i quasi-lineals de primer odre}
+\section{Equacions en derivades parcials de segon ordre}
+	\subsection{Equacions de la corda finita}
+	\subsection{Principi d'Alembert}
+	\subsection{Problemes de contorn}
+	\subsection{L'equació de la calor}
+	\subsection{Problema de la barra infinita}
+	\subsection{Separació de variables i sèries de Fourier}
+	\subsection{L'equació de Laplace}
+\end{comment}
 \end{document} 
