Afegits enunciats fins començar la secció de la primera forma fonamental

--- a/parts/GeoDiferencial.tex
+++ b/parts/GeoDiferencial.tex
@@ -1230,7 +1230,7 @@
 		\end{proof}
 	\end{proposition}
 	\section{Primera forma fonamental}
-	\section{Espai tangent a una superfície}
+	\subsection{Espai tangent a una superfície}
 	\begin{definition}[Vectors tangents]
 		\labelname{vectors tangents}\label{def:vectors tangents a una superfície}
 		\labelname{espai tangent}\label{def:espai tangent a una superfície}
