Arreglades alguna falta d'ortografía i he començat a escriure EDOS II.

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -159,6 +159,7 @@
 \newcommand{\biguniodisjunts}{\bigsqcup}
 \newcommand{\prodvec}{\mathbin{\wedge}}
 \newcommand{\rapidesa}{v}
+\newcommand{\transposta}{\top}
 
 \newcommand{\sii}{\iff}
 \newcommand{\Sii}{\Longleftrightarrow}
